--- a/src/PortfolioRebalancer/PortfolioRebalancer.App/Views/MainWindow.xaml
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.App/Views/MainWindow.xaml
@@ -25,7 +25,10 @@
     
     <StackPanel Grid.Row="1" Margin="5">
       <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" />
+      <ContentControl Content="{Binding Content}"/>
     </StackPanel>
+    
+    
   </Grid>
    
 
