--- a/src/PortfolioRebalancer/PortfolioRebalancer.App/Views/PortfolioView.xaml
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.App/Views/PortfolioView.xaml
@@ -8,7 +8,8 @@
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="0.3*" />
-      <RowDefinition Height="0.7*" />
+      <RowDefinition Height="0.6*" />
+      <RowDefinition Height="0.1*" />
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="0.5*" />
@@ -40,7 +41,7 @@
       </oxy:Plot.Series>
     </oxy:Plot>
   
-    <ListBox Grid.Row="1" Grid.ColumnSpan="2" Items="{Binding Assets}">
+    <ListBox Grid.Row="1" Grid.ColumnSpan="2" Items="{Binding Assets}" ScrollViewer.VerticalScrollBarVisibility="Auto">
       <ListBox.ItemTemplate>
         <DataTemplate>
           <StackPanel Orientation="Horizontal">
@@ -50,5 +51,7 @@
         </DataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
+    
+    <Button Grid.Row="2" HorizontalAlignment="Right" Content="Save" Command="{Binding SavePortfolioCommand, Mode=TwoWay}" />
   </Grid>
 </UserControl>
