--- a/src/PortfolioRebalancer/PortfolioRebalancer.App/Views/PortfolioView.xaml
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.App/Views/PortfolioView.xaml
@@ -7,17 +7,18 @@
              x:Class="PortfolioRebalancer.App.Views.PortfolioView">
   <Grid>
     <Grid.RowDefinitions>
+      <RowDefinition Height="0.1*" />
       <RowDefinition Height="0.3*" />
       <RowDefinition Height="0.6*" />
-      <RowDefinition Height="0.1*" />
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="0.5*" />
       <ColumnDefinition Width="0.5*" />
     </Grid.ColumnDefinitions>
- 
+
+    <Button Grid.Row="0" Grid.Column="1" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Content="Save" Command="{Binding SavePortfolioCommand, Mode=TwoWay}" />
   
-    <oxy:Plot Grid.Row="0" Grid.Column="0" Title="Asset balance" Width="400" Height="300" >
+    <oxy:Plot Grid.Row="1" Grid.Column="0" Title="Asset balance" Width="400" Height="300" >
       <oxy:Plot.Series>
         <oxy:PieSeries 
             InnerDiameter="0.2"
@@ -29,7 +30,7 @@
       </oxy:Plot.Series>
     </oxy:Plot>
 
-    <oxy:Plot Grid.Row="0" Grid.Column="1" Title="Tag balance" Width="400" Height="300" >
+    <oxy:Plot Grid.Row="1" Grid.Column="1" Title="Tag balance" Width="400" Height="300" >
       <oxy:Plot.Series>
         <oxy:PieSeries
             InnerDiameter="0.2"
@@ -41,17 +42,23 @@
       </oxy:Plot.Series>
     </oxy:Plot>
   
-    <ListBox Grid.Row="1" Grid.ColumnSpan="2" Items="{Binding Assets}" ScrollViewer.VerticalScrollBarVisibility="Auto">
+    
+    <ListBox Grid.Row="2" Grid.ColumnSpan="2" Items="{Binding Assets}" ScrollViewer.VerticalScrollBarVisibility="Auto">
       <ListBox.ItemTemplate>
         <DataTemplate>
-          <StackPanel Orientation="Horizontal">
-            <TextBlock Text="{Binding Name}"/>
-            <TextBox Text="{Binding Tag, Mode=TwoWay}" />
-          </StackPanel>
+          <Grid>
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="60" />
+              <ColumnDefinition Width="0.3*" />
+              <ColumnDefinition Width="0.6*" />
+            </Grid.ColumnDefinitions>
+            <TextBox Grid.Column="0" Margin="5 0 5 0" Text="{Binding Tag, Mode=TwoWay}" BorderBrush="LightBlue" Foreground="LightBlue" HorizontalAlignment="Left" />
+            <TextBlock Grid.Column="1" Margin="5 0 5 0" Text="{Binding Name}" FontWeight="SemiBold" FontSize="14" VerticalAlignment="Center"/>
+          </Grid>
         </DataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
     
-    <Button Grid.Row="2" HorizontalAlignment="Right" Content="Save" Command="{Binding SavePortfolioCommand, Mode=TwoWay}" />
+    
   </Grid>
 </UserControl>
