--- a/src/PortfolioRebalancer/PortfolioRebalancer.App/Views/ImportDialog.xaml
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.App/Views/ImportDialog.xaml
@@ -2,28 +2,29 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        xmlns:local="clr-namespace:PortfolioRebalancer.App.Utilities;assembly=PortfolioRebalancer.App"
+        mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="200"
         x:Class="PortfolioRebalancer.App.Views.ImportDialog"
+        Width="400" Height="150"
         Title="ImportDialog">
   <Grid>
     <Grid.RowDefinitions>
-      <RowDefinition Height="0.7*" />
-      <RowDefinition Height="0.2*" />
-      <RowDefinition Height="0.1*" />
+      <RowDefinition Height="40" />
+      <RowDefinition Height="*" />
+      <RowDefinition Height="50" />
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="0.7*" />
+      <ColumnDefinition Width="0.2*" />
+      <ColumnDefinition Width="0.5*" />
       <ColumnDefinition Width="0.3*" />
     </Grid.ColumnDefinitions>
 
-    <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
-      <TextBlock  Text="Portfolio Id" />
-      <TextBox Text="{Binding PortfolioId, Mode=TwoWay}" />
-    </StackPanel>
+      <TextBlock Grid.Row="0" Grid.Column="0" Text="Portfolio Id" Margin="5 10 5 0" VerticalAlignment="Center" />
+      <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding PortfolioId, Mode=TwoWay}" Width="200" Margin="5 10 5 0" VerticalAlignment="Center" />
 
-    <Button Grid.Row="0" Grid.Column="1" Content="Start Import" Command="{Binding StartImport, Mode=TwoWay}" />
+    <Button Grid.Row="0" Grid.Column="2" Content="Start Import" Command="{Binding StartImport, Mode=TwoWay}" Margin="5 10 5 0" />
 
-    <Button x:Name="Close" Content="Close" Grid.Row="1" Grid.Column="1" />
+    <TextBlock Grid.Row="2" Grid.ColumnSpan="3" Foreground="Green" Text="Loading" IsVisible="{Binding ImportInProgress}" />
   </Grid>
 
 </Window>
